grammar.js
    source_file: ($) => repeat($._line),

    _line: ($) => choice($.statement, $._blank_line, $.display_line),
    separator: ($) => seq(/\\/, optional($.comment), /\s*/),
    statement: ($) =>
      seq(
        $.stmt_prefix,
        optional($.label),
        repeat(" "),
        choice(repeat($._contents), $.if),
        $.stmt_terminator,
        optional($.comment),
      ),

    stmt_prefix: ($) => token("@"),

    // `label` A number identifying the statement line.
    // Use three or four-character, zero-filled labels (e.g., `@0003`) for easier script maintenance.
    label: ($) =>
      seq(
        /\d{3,4}/,
        optional(seq(":", optional($._subroutine_parameter_list))),
      ),
    goto_reference: ($) =>
      choice(
        /\d{1,4}/,
        $._variable,
        delimited_content(
          ",",
          alias(/[Ee][Nn][Dd]/, $.keyword),
          optional(choice($.numeric_literal, $._variable)),
          optional(choice($.numeric_literal, $._variable)),
          choice($.numeric_literal, $._variable),
        ),
        seq(
          alias(/[Ll][Ii][Nn]/, $.keyword),
          optional(" "),
          optional(alias(choice("+", "-"), $.operator)),
          field("line_count", $.numeric_literal),
        ),
        seq(
          alias(/[Rr][Pp][Xx]/, $.keyword),
          " ",
          field("report", choice($.numeric_literal, $.string_literal)),
        ),
      ),

    // `call` The function call — an abbreviation for the operation name.
    // All calls stored in constants.js and mapped through case-insensitive function
    call: ($) => token(choice(...get_calls())),

    // The semicolon is allowed to appear before the terminator in IF statements, but otherwise it is space-period-space.
    stmt_terminator: ($) => token("."),

    comment: (_) => prec(-1, seq(/[^\n]+/, /\n/)),

    _contents: ($) =>
      choice(
        $.ldv,
        $.srh,
        $.sru,
        $.gto,
        $.inc,
        $.dec,
        $.chg,
        $.call_subroutine,
        $.return,
        $.rnm,
        $.bfn,
        $.fdr,
        $.rln,
        $.rdl,
        $.rer,
        $.rsr,
        $.lcv,
        $.lny,
        $.lnp,
        $._generic_statement,
      ),

    numeric_literal: ($) => token(/[0-9]+/),
    numeric_range: ($) =>
      seq(
        choice($._variable, $.numeric_literal),
        "-",
        choice($._variable, $.numeric_literal),
      ),
    identifier: ($) => token(/[A-Za-z][A-Za-z0-9]+/),
    line_type: ($) =>
      token(choice("|", "*", ".", " ", "@", /[A-Za-z]/, /\$[TtAaBb]/)),

    // Essentially a RHS to an expression
    named_variable: ($) => token(seq("<", /[^>]{1,12}/, ">")),
    numbered_variable: ($) => token(seq(/[Vv]/, /\d{1,3}/)),

    type: ($) =>
      token(prec(2, seq(/[afhiosAFHIOS]/, /\d{1,3}/, optional(/\.\d{1,2}/)))),
    _variable: ($) =>
      choice(
        $.named_variable,
        $.global_variable,
        $.env_variable,
        $.numbered_variable,
      ),
    _variable_definition: ($) =>
      prec.left(
        2,
        seq(
          choice(
            $.named_variable,
            $.global_variable,
            $.env_variable,
            $.numbered_variable,
          ),
          optional($.type),
          optional($.array_index),
          optional($.substring),
        ),
      ),
    address: ($) =>
      prec.right(
        2,
        choice(
          field("report", choice($._data_name, $.report_reference)),
          seq(
            field(
              "cabinet",
              choice($.numeric_literal, $._variable, $.reserved_word),
            ),
            ",",
            field(
              "drawer",
              choice(
                alias(/[A-Ia-i]/, $.identifier),
                $._variable,
                $.reserved_word,
              ),
            ),
            ",",
            optional(
              field(
                "report",
                choice($.numeric_literal, $._variable, $.report_reference),
              ),
            ),
          ),
        ),
      ),

    // These can't be followed by other params - must end with whitespace
    _data_name: ($) => alias(token(seq("'", /[^']*/, "'")), $.string_literal),

    // Many commands have options which are sequences of characters
    option: ($) => /[A-Za-z@/]/,

    // Column character positions
    field: ($) => choice($.string_literal, $.numeric_range),

    // Search parameters list
    search_param: ($) =>
      seq(optional($.line_type), repeat1(seq(",", optional($._parameter)))),

    _parameter: ($) =>
      choice(
        $._variable_definition,
        $.string_literal,
        alias(/[A-Za-z0-9@=]+/, $.identifier),
      ),

    report_reference: ($) => token(choice(/\-[0-9]/, /\-1[0-6]/)),

    // Specific calls

    // LDV - Load Variables

    ldv: ($) => choice($._ldv_fmt1_fmt2, $._ldv_fmt3),

    // In practice it would seem that you can mix and match fmt1 and fmt2
    _ldv_fmt1_fmt2: ($) =>
      seq(
        $._ldv_call,
        optional(seq(",", repeat1($._ldv_base_options))),
        " ",
        choice($._variable_definition, $._variable_assignment),
        repeat(
          seq(",", choice($._variable_definition, $._variable_assignment)),
        ),
        " ",
      ),
    _ldv_fmt3: ($) =>
      seq(
        $._ldv_call,
        seq(
          ",",
          repeat($._ldv_base_options),
          alias(/[Qq]/, $.option),
          repeat($._ldv_base_options),
        ),
        " ",
        $._variable_assignment_delimited,
        repeat(seq(",", $._variable_assignment_delimited)),
        " ",
      ),
    srh: ($) =>
      seq(
        alias(/[Ss][Rr][Hh]/, $.call),
        ",",
        $._srh_report,
        " ",
        choice(repeat1(alias($._srh_option, $.option)), /''/),
        " ",
        $.field,
        repeat(seq(",", $.field)),
        " ",
        $.search_param,
        repeat(seq("/", $.search_param)),
        " ",
        optional(
          seq(
            delimited_content(
              ",",
              optional($._variable_definition),
              optional($._variable_definition),
              $._variable_definition,
            ),
            " ",
          ),
        ),
      ),

    sru: ($) =>
      seq(
        alias(/[Ss][Rr][Uu]/, $.call),
        ",",
        $._srh_report,
        " ",
        choice(repeat1(alias($._srh_option, $.option)), /''/),
        " ",
        $.field,
        repeat(seq(",", $.field)),
        " ",
        $.search_param,
        repeat(seq("/", $.search_param)),
        " ",
        optional(
          seq(
            delimited_content(
              ",",
              optional($._variable_definition),
              optional($._variable_definition),
              $._variable_definition,
            ),
            " ",
          ),
        ),
      ),

    _srh_report: ($) =>
      choice(
        delimited_content(
          ",",
          $.address,
          optional(field("start_line", choice($.numeric_literal, $._variable))),
          optional(field("num_lines", choice($.numeric_literal, $._variable))),
          field("missing_goto", $.goto_reference),
        ),
        alias($._short_address, $.address),
      ),

    _srh_option: ($) =>
      choice(
        seq(/[@]/, "(", $.character, ")"),
        seq(/[LlUu]/, "(", $.line_type, ")"),
        seq(/[TtYy]/, optional(seq("(", $.line_type, ")"))),
        seq(/[Cc]/, "(", /[FfLlSs]/, ")"),
        seq(/[Ee]/, "(", $.numeric_literal, ")"),
        seq(/[BbQq]/, optional(seq("(", $.numeric_literal, ")"))),
        seq(
          /[Rr]/,
          choice($.numeric_range, $.numeric_literal),
          repeat(seq(",", choice($.numeric_range, $.numeric_literal))),
        ),
        /[AaDdFfHhNnPpSs@/]/,
      ),

    // GTO Statement

    _subroutine_parameter_list: ($) =>
      seq(
        "(",
        optional(
          seq($.subroutine_parameter, repeat(seq(",", $.subroutine_parameter))),
        ),
        ")",
      ),
