test/corpus/sru_statement.txt
==============
SRU Statement
==============

@010:sru,20,b,,,,100 adhrv1-5000 2-4 ,1234 ,,v1 .

---

(source_file
  (statement
    (stmt_prefix)
    (label)

    (sru
      (call)
      (address
        cabinet: (numeric_literal)
        drawer: (identifier)
      )
      missing_goto: (goto_reference)
      (option)
      (option)
      (option)
      (option
        (numeric_range
          (numbered_variable)
          (numeric_literal)
        )
      )
      (field
        (numeric_range
          (numeric_literal)
          (numeric_literal)
        )
      )
      (search_param
        (identifier)
      )
      (numbered_variable)
    )

    (stmt_terminator)
  )
)
