test/corpus/statement_continuation.txt
==============
Line Separator
==============

@    LDV,P <run>,<title> \ Pack
     LDV,CU <rundesc>s40=<title> . Center, Uppercase

---

(source_file
  (statement
    (stmt_prefix)
      (ldv 
        (call)
        (options)
        (named_variable)
        (named_variable)
      )
      (comment)
      (ldv 
        (call)
        (options)
        (named_variable)
        (type)
        (named_variable)
      )
    (stmt_terminator)
    (comment)
  )
)
